--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,8 @@
     <string name="app_name">appa</string>
     <string name="action_settings">Settings</string>
     <string name="mapbox_access_token">pk.eyJ1IjoiaW5kb21pZTg1OCIsImEiOiJja2ZlbW44dmMwMjdvMzBvNTk3ZXFwcDk2In0._VSFOGxW70jW308e9MxFWA</string>
+    <string name="home_button" >Home</string>
+    <string name="settings_button">Settings</string>
+    <string name="assistant_button">Assistant</string>
+    <string name="tutorial_button">Tutorial</string>
 </resources>
