--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,12 +2,13 @@
     <string name="app_name">appa</string>
     <string name="action_settings">Settings</string>
     <string name="mapbox_access_token">pk.eyJ1IjoiaW5kb21pZTg1OCIsImEiOiJja2ZlbW44dmMwMjdvMzBvNTk3ZXFwcDk2In0._VSFOGxW70jW308e9MxFWA</string>
-    <string name="home_button" >Home</string>
-    <string name="settings_button">Settings</string>
-    <string name="assistant_button">Assistant</string>
-    <string name="tutorial_button">Tutorial</string>
-    <string name="connect_button">Connect app-A</string>
-    <string name="around_me_button">What\'s Around Me?</string>
-    <string name="navigation_button">Navigation</string>
-    <string name="save_location_button">Save Location</string>
+    <string name="home_nav">Home</string>
+    <string name="settings_nav">Settings</string>
+    <string name="assistant_nav">Assistant</string>
+    <string name="tutorial_nav">Tutorial</string>
+    <string name="connect_appa">Connect app-A</string>
+    <string name="around_me">What\'s Around Me?</string>
+    <string name="navigation">Navigation</string>
+    <string name="save_location">Save Location</string>
+    <string name="page_title">APP-A</string>
 </resources>
