--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,5 +10,5 @@
     <string name="around_me">What\'s Around Me?</string>
     <string name="navigation">Navigation</string>
     <string name="save_location">Save Location</string>
-    <string name="page_title">APP-A</string>
+    <string name="home_title">Home</string>
 </resources>
