--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,7 @@
     <string name="home_title">Home</string>
     <string name="map">Map</string>
     <string name="content_description_map">show map</string>
+    <!-- Settings -->
+    <string name="default_value_preference_theme">light</string>
+    <string name="default_value_preference_textSize">12</string>
 </resources>
