Added back nav from navigationactivity to parent mainactivity
Added back nav to NavigationListActivity and MapActivity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,6 @@
     <string name="default_value_preference_theme">light</string>
     <string name="default_value_preference_textSize">12</string>
     <string name="title_activity_settings">SettingsActivity</string>
+    <string name="title_activity_map">MapActivity</string>
+    <string name="title_activity_navigation_list">NavigationListActivity</string>
 </resources>
