--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="action_settings">Settings</string>
     <string name="mapbox_access_token">pk.eyJ1IjoiaW5kb21pZTg1OCIsImEiOiJja2ZlbW44dmMwMjdvMzBvNTk3ZXFwcDk2In0._VSFOGxW70jW308e9MxFWA</string>
     <string name="location_list">List of locations</string>
+
     <string name="home_nav">Home</string>
     <string name="settings_nav">Settings</string>
     <string name="assistant_nav">Assistant</string>
@@ -11,6 +12,7 @@
     <string name="around_me">What\'s Around Me?</string>
     <string name="navigation">Navigation</string>
     <string name="save_location">Save Location</string>
+    <string name="bluetooth_title">Bluetooth Connect</string>
     <string name="home_title">Home</string>
     <string name="map">Map</string>
     <string name="content_description_map">show map</string>
