Changed to Directory

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,7 @@
     <string name="assistant_nav">Assistant</string>
     <string name="tutorial_nav">Tutorial</string>
     <string name="connect_appa">Connect app-A</string>
-    <string name="around_me">What\'s Around Me?</string>
+    <string name="directory">Directory</string>
     <string name="navigation">Navigation</string>
     <string name="save_location">Save Location</string>
     <string name="bluetooth_title">Bluetooth Connect</string>
