--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,6 +43,11 @@
     <string name="new_location">New lat: %1$s New longitude: %2$s</string>
 
 
+    <!-- Location place tiles -->
+    <string name="search_by_name">Search by Name</string>
+    <string name="btn_loc_more_info">More Information Button</string>
+
+
     <!-- Tutorial -->
     <string name="app_manual">App Manual</string>
     <string name="cane_setup">Cane Setup</string>
