Removed unwanted icon

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -215,6 +215,8 @@
     <string name="history_recorded_history_file">Recorded history file</string>
     <!-- END MAPBOX GITHUB REPO -->
 
+    <string name="row_item_xml_icon_description">Home categories icon</string>
+
     <!-- TODO: Remove or change this placeholder text -->
     <string name="tutorial_header">APP-A Tutorial</string>
     <string name="tutorial_body"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean et enim in ex pharetra venenatis. Praesent urna justo, maximus quis ligula et, tempor tincidunt ex. Integer lobortis suscipit pretium. Mauris convallis, massa ut dignissim ornare, velit ligula pharetra turpis, id posuere purus magna sed nulla. Nam sed purus mauris. Sed in nunc bibendum, maximus nunc sit amet, blandit lorem. Maecenas tristique nec enim at sodales. Donec fringilla ultricies tempor. Aliquam maximus finibus est, sit amet aliquam arcu faucibus et. Cras faucibus sagittis justo, quis vehicula tellus convallis at. Mauris convallis, metus at laoreet ultrices, diam turpis lacinia nibh, ut accumsan lorem urna at ipsum. Ut ac quam ut massa scelerisque convallis. Fusce id elementum nisi. Morbi ut neque pellentesque, consectetur lectus auctor, posuere magna. Duis faucibus semper dapibus. Vestibulum sed pretium ex, quis ullamcorper tellus.
