--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,7 +17,9 @@
     <string name="home_title">Home</string>
 
     <string name="content_description_map">show map</string>
-
+    <!-- Bluetooth Dialog -->
+    <string name="bluetooth_dialog_confirm">Accept</string>
+    <string name="bluetooth_dialog_exit">Exit</string>
     <!-- Settings -->
     <string name="title_activity_map">Map</string>
     <string name="title_activity_navigation_list">NavigationListActivity</string>
