Created a table for the entrances

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">appa</string>
     <string name="action_settings">Settings</string>
-    <string name="mapbox_access_token">pk.eyJ1IjoiaW5kb21pZTg1OCIsImEiOiJja2lyeWwyN2owMWRjMnVudnFvb3Q1NnZpIn0.mdJ9iG6cS5hzcf3FwXTt_A</string>
+    <string name="mapbox_access_token">sk.eyJ1IjoiaW5kb21pZTg1OCIsImEiOiJja2lyeW4xaDkwNjFzMnFybzltYzRtdzN2In0.SBQy500J1D7HLmM_VJjayg</string>
     <string name="location_list">List of locations</string>
 
     <!-- Navigation-->
