--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -84,7 +84,7 @@
     </string>
     <string name="attachment_summary_off">Only download attachments when manually requested</string>
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="stepOne">This is the first step</string>
 
     <string name="navigation_ui_sdk_title">Navigation UI SDK</string>
     <string name="navigation_ui_sdk_description">Hosts examples to demonstrate the use of the Navigation UI SDK.</string>
@@ -242,6 +242,8 @@ Can this app be use anytime during the day?\n
 Yes, this app is designed to work at any given time. At night, the Arduino will flash a light to notify anyone around of your presence.</string>
     <string name="tutorial_2_head">CANE</string>
     <string name="tutorial_2_body">BODY 2 </string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="stepTwo">This is the second step</string>
 
 </resources>
 
