--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,10 +50,7 @@
     <string name="btn_loc_more_info">More Information Button</string>
 
 
-    <!-- Tutorial -->
-    <string name="app_manual">App Manual</string>
-    <string name="cane_setup">Cane Setup</string>
-    <string name="resource_links">Resource Links</string>
+
 
     <!-- Category Names For Search Queries-->
     <string name="all"></string>
@@ -218,8 +215,15 @@
 
     <string name="row_item_xml_icon_description">Home categories icon</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
+    <!-- Tutorial -->
+    <string name="resource_links">Resource Links</string>
     <string name="tutorial_header">APP-A MANUAL</string>
+    <string name="tutorialTabNameAppManual">App Manual</string>
+    <string name="tutorialTabNameCaneSetup">Cane Setup</string>
+    <string name="tutorialTabNameStep1">Step1</string>
+    <string name="tutorialTabNameStep2">Step2</string>
+    <string name="tutorialTabNameStep3">Step3</string>
+    <string name="tutorialTabNameStep4">Step4</string>
     <string name="tutorial_body">This user manual has been specifically designed to guide you
 through the functions and features of our mobile application.\n\n
 Home button = opens the home page.\n
@@ -240,15 +244,7 @@ Is the app accessible?\n
 Yes, this app is designed to adhere to accessibility guidelines.\n\n
 Can this app be use anytime during the day?\n
 Yes, this app is designed to work at any given time. At night, the Arduino will flash a light to notify anyone around of your presence.</string>
-    <string name="tutorial_2_head">CANE</string>
-    <string name="tutorial_2_body">BODY 2 </string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="stepTwo">This is the second step</string>
 
-    <string name="tutorialStep1">Step1</string>
-    <string name="tutorialSteo2">Step2</string>
-    <string name="tutorialStep3">Step3</string>
-    <string name="tutorialStep4">Step4</string>
 
 </resources>
 
