--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,7 +59,7 @@
     <string name="classrooms">Classrooms</string>
     <string name="Services">Services</string>
     <string name="student_stores">Student Stores</string>
-    <string name="Fitness">Fitness</string>
+    <string name="fitness">Fitness</string>
 
 
     <!-- ALL OF THESE ARE FROM MAPBOX GITHUB REPO -->
