Fix string build error

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,7 +57,7 @@
     <string name="classrooms">Classrooms</string>
     <string name="Services">Services</string>
     <string name="student_stores">Student Stores</string>
-    <string name="fitness">Fitness</string>
+    <string name="Fitness">Fitness</string>
 
 
     <!-- ALL OF THESE ARE FROM MAPBOX GITHUB REPO -->
